code clean gradle file